maven add scalatest, junit and shade